# file-search

./: .gitignore  Cargo.toml  README.md  release.sh
src/: content.rs  index.rs  lib.rs  main.rs  scan.rs  time_filter.rs
