[package]
name = "file-search"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
notify = "6"
ahash = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
