[package]
name = "file-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "file_search"
path = "src/lib.rs"

[[bin]]
name = "f"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
memchr = "2.7"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
